--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "8.10"
 }
 
 group = 'org.somethings'
@@ -24,7 +25,7 @@ dependencies {
     //Faker
     testImplementation 'com.github.javafaker:javafaker:1.0.1'
     // Lombock
-    implementation 'org.projectlombok:lombok:1.18.26'
+    //implementation 'org.projectlombok:lombok:1.18.26'
 }
 
 test {
